# AiZO_projekt1_272993

./: CMakeLists.txt
Headers/: Array.h  HeapSort.h  InsertionSort.h  Menu.h  QuickSort.h  ShellSort.h  SortAlgorithm.h  SortingTester.h
Sources/: Menu.cpp  main.cpp
